// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update strip invalid spread of collapsed barrels strips the TuiActionBar spread and keeps neighbors and their order: test.ts 1`] = `
{
  "0. Before": "
                import {TuiActionBar} from '@taiga-ui/kit';
                import {CommonModule} from '@angular/common';
                import {NgModule} from '@angular/core';

                class AaaModule {}
                class ZzzModule {}

                @NgModule({
                    imports: [CommonModule, AaaModule, ...TuiActionBar, ZzzModule],
                })
                export class TestModule {}
            ",
  "1. After": "
                import {TuiActionBar} from '@taiga-ui/kit';
                import {CommonModule} from '@angular/common';
                import {NgModule} from '@angular/core';

                class AaaModule {}
                class ZzzModule {}

                @NgModule({
                    imports: [CommonModule, AaaModule, TuiActionBar, ZzzModule],
                })
                export class TestModule {}
            ",
}
`;

exports[`ng-update strip invalid spread of collapsed barrels strips the spread from a barrel that became a single class in @NgModule imports: test.ts 1`] = `
{
  "0. Before": "
                import {TuiExpand} from '@taiga-ui/core';
                import {NgModule} from '@angular/core';

                @NgModule({
                    imports: [...TuiExpand],
                })
                export class TestModule {}
            ",
  "1. After": "
                import {TuiExpand} from '@taiga-ui/core';
                import {NgModule} from '@angular/core';

                @NgModule({
                    imports: [TuiExpand],
                })
                export class TestModule {}
            ",
}
`;

exports[`ng-update strip invalid spread of collapsed barrels strips the spread in a standalone component too: test.ts 1`] = `
{
  "0. Before": "
                import {TuiExpand} from '@taiga-ui/core';
                import {Component} from '@angular/core';

                @Component({
                    standalone: true,
                    imports: [...TuiExpand],
                    template: '',
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {TuiExpand} from '@taiga-ui/core';
                import {Component} from '@angular/core';

                @Component({
                    standalone: true,
                    imports: [TuiExpand],
                    template: '',
                })
                export class TestComponent {}
            ",
}
`;
